--- a/style.css
+++ b/style.css
@@ -1,1 +1,195 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
+body {
+  font-size: 14px;
+  font-family: 'Raleway', sans-serif;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #0c122c;
+}
+
+.container {
+  width: 65%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.main {
+  background-color: #1d2c67;
+  padding: 40px;
+  width: 35%;
+  border-radius: 10px 80px 10px 10px;
+  margin-right: 30px;
+}
+
+.menu {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+      grid-template-areas: "file folder upload";
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  margin-top: 20px;
+  width: 70%;
+}
+
+.file, .folder, .upload {
+  background-color: #0c122c;
+  padding: 10px;
+  border-radius: 10px;
+  width: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.data {
+  background-color: #1d2c67;
+  width: 65%;
+  padding: 30px 40px 30px 40px;
+  color: #dddbff;
+  border-radius: 10px;
+  position: relative;
+}
+
+.data h1 {
+  position: absolute;
+  background-color: #fff;
+  padding: 10px 20px 10px 20px;
+  color: #0c122c;
+  border-radius: 10px 10px 0 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 40px;
+  top: -50%;
+  right: 7%;
+}
+
+.data h1 span {
+  color: #848794;
+  font-size: 14px;
+  margin-left: 10px;
+}
+
+.data h1::before {
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  border-left: 10px solid transparent;
+  border-right: 10px solid white;
+  border-top: 10px solid white;
+  border-bottom: 10px solid transparent;
+  right: 0;
+  bottom: -20px;
+}
+
+input {
+  margin: 20px 0 0 0;
+  width: 100%;
+  background: -webkit-gradient(linear, left top, right top, from(#ffa399), color-stop(81.5%, #ff4d97), color-stop(81.5%, #0c122c), to(#0c122c));
+  background: linear-gradient(to right, #ffa399 0%, #ff4d97 81.5%, #0c122c 81.5%, #0c122c 100%);
+  height: 10px;
+  border-radius: 8px;
+  outline: none;
+  -webkit-appearance: none;
+}
+
+input::-webkit-slider-thumb {
+  background-color: white;
+  border: solid 6px white;
+  height: 4px;
+  width: 4px;
+  border-radius: 50%;
+  -webkit-appearance: none;
+}
+
+.gb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: -10px;
+}
+
+@media (max-width: 1440px) {
+  body {
+    background: url("./images/bg-desktop.png") center bottom no-repeat;
+    background-size: contain;
+    background-color: #0c122c;
+  }
+}
+
+@media (max-width: 1200px) {
+  body {
+    background: url("./images/bg-mobile.png") top center no-repeat;
+    background-size: cover;
+    background-color: #0c122c;
+  }
+  .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 350px;
+    margin-top: -100px;
+  }
+  .main {
+    width: 70%;
+    margin: 0;
+  }
+  .data {
+    width: 70%;
+    margin-top: 20px;
+  }
+  .data h1 {
+    position: absolute;
+    right: 25%;
+    top: 57%;
+    border-radius: 10px;
+  }
+  .data h1::before {
+    display: none;
+  }
+}
+/*# sourceMappingURL=style.css.map */
