--- a/style.sass
+++ b/style.sass
@@ -109,8 +109,7 @@ input::-webkit-slider-thumb
 
 @media (max-width: 1200px)     
     body
-        background: url("./images/bg-mobile.png") top center no-repeat
-        background-size: cover
+        background: none
         background-color: $very-dark-blue
 
     .container
@@ -135,3 +134,8 @@ input::-webkit-slider-thumb
             border-radius: 10px
             &::before
                 display: none
+
+@media (max-width: 540px)      
+    body
+        background: url("./images/bg-mobile.png") top center no-repeat
+        background-size: cover        
