--- a/style.sass
+++ b/style.sass
@@ -35,6 +35,8 @@ body
     align-items: stretch
     margin-top: 20px
     width: 70%
+    & img:hover
+        cursor: pointer
 
 .file, .folder, .upload
     background-color: $very-dark-blue
@@ -104,14 +106,10 @@ input::-webkit-slider-thumb
 @media (max-width: 1440px)
     body
         background: url("./images/bg-desktop.png") center bottom no-repeat
-        background-size: contain
+        background-size:  auto 50%
         background-color: $very-dark-blue
 
 @media (max-width: 1200px)     
-    body
-        background: none
-        background-color: $very-dark-blue
-
     .container
         display: flex
         flex-direction: column
