--- a/style.sass
+++ b/style.sass
@@ -106,7 +106,7 @@ input::-webkit-slider-thumb
 @media (max-width: 1440px)
     body
         background: url("./images/bg-desktop.png") center bottom no-repeat
-        background-size:  auto 50%
+        background-size:  100% 50%
         background-color: $very-dark-blue
 
 @media (max-width: 1200px)     
