--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-size: 14px;
   font-family: 'Raleway', sans-serif;
@@ -60,7 +67,7 @@ body {
   background-color: #0c122c;
   padding: 10px;
   border-radius: 10px;
-  width: 25px;
+  width: 45px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -75,7 +82,7 @@ body {
 .data {
   background-color: #1d2c67;
   width: 65%;
-  padding: 30px 40px 30px 40px;
+  padding: 40px;
   color: #dddbff;
   border-radius: 10px;
   position: relative;
@@ -94,7 +101,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   font-size: 40px;
-  top: -50%;
+  top: -40%;
   right: 7%;
 }
 
@@ -144,7 +151,7 @@ input::-webkit-slider-thumb {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-top: -10px;
+  margin-top: 3px;
 }
 
 @media (max-width: 1440px) {
@@ -174,17 +181,17 @@ input::-webkit-slider-thumb {
     margin-top: -40px;
   }
   .main {
-    width: 70%;
+    width: 100%;
     margin: 0;
   }
   .data {
-    width: 70%;
+    width: 100%;
     margin-top: 20px;
   }
   .data h1 {
     position: absolute;
     right: 25%;
-    top: 57%;
+    top: 77%;
     border-radius: 10px;
   }
   .data h1::before {
